welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.error
ColumnByColumn:2: error: '=' expected but ';' found.
	while (setPos(x,y)=!getPos(getMondeHauteur()-1,getMondeHauteur()-1)) {
^ColumnByColumn:10: error: expected start of definition
	override def forward(i:Int)  { 
                 ^ColumnByColumn:13: error: expected start of definition
	override def forward()  {
                 ^ColumnByColumn:16: error: expected start of definition
	override def backward(i:Int) {
                 ^ColumnByColumn:19: error: expected start of definition
	override def backward() {
                 ^ColumnByColumn:22: error: Unmatched closing brace '}' ignored here
}
^